--- a/client/src/index.css
+++ b/client/src/index.css
@@ -113,6 +113,10 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+button:active {
+  scale: 0.98;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
