--- a/client/src/index.css
+++ b/client/src/index.css
@@ -117,7 +117,7 @@ button:active {
   scale: 0.98;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -128,4 +128,4 @@ button:active {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
